Avatar upload frst part - may 17
