# openapi.json
@@ -469,6 +469,49 @@
         ]
       }
     },
+    "/users-avatar": {
+      "post": {
+        "summary": "Upload Avatar",
+        "operationId": "upload_avatar_users_avatar_post",
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "$ref": "#/components/schemas/Body_upload_avatar_users_avatar_post"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/StandardResponse_dict_"
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "HTTPBearer": []
+          }
+        ]
+      }
+    },
     "/conversation": {
       "post": {
         "summary": "Create Or Get Conversation",
@@ -864,6 +907,22 @@
         ]
       }
     },
+    "/asyncapi.json": {
+      "get": {
+        "summary": "Get Asyncapi",
+        "operationId": "get_asyncapi_asyncapi_json_get",
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
+            }
+          }
+        }
+      }
+    },
     "/": {
       "get": {
         "summary": "Root",
@@ -930,6 +989,20 @@
           "is_verified"
         ],
         "title": "AuthResponseData"
+      },
+      "Body_upload_avatar_users_avatar_post": {
+        "properties": {
+          "file": {
+            "type": "string",
+            "contentMediaType": "application/octet-stream",
+            "title": "File"
+          }
+        },
+        "type": "object",
+        "required": [
+          "file"
+        ],
+        "title": "Body_upload_avatar_users_avatar_post"
       },
       "ChatItem": {
         "properties": {
@@ -1778,6 +1851,17 @@
           "is_verified": {
             "type": "boolean",
             "title": "Is Verified"
+          },
+          "avatar_url": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Avatar Url"
           }
         },
         "type": "object",
@@ -1875,6 +1959,17 @@
               }
             ],
             "title": "Phone"
+          },
+          "avatar_url": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Avatar Url"
           }
         },
         "type": "object",
