# schema.ts
@@ -140,6 +140,23 @@ export interface paths {
         patch?: never;
         trace?: never;
     };
+    "/users-avatar": {
+        parameters: {
+            query?: never;
+            header?: never;
+            path?: never;
+            cookie?: never;
+        };
+        get?: never;
+        put?: never;
+        /** Upload Avatar */
+        post: operations["upload_avatar_users_avatar_post"];
+        delete?: never;
+        options?: never;
+        head?: never;
+        patch?: never;
+        trace?: never;
+    };
     "/conversation": {
         parameters: {
             query?: never;
@@ -225,6 +242,23 @@ export interface paths {
         patch?: never;
         trace?: never;
     };
+    "/asyncapi.json": {
+        parameters: {
+            query?: never;
+            header?: never;
+            path?: never;
+            cookie?: never;
+        };
+        /** Get Asyncapi */
+        get: operations["get_asyncapi_asyncapi_json_get"];
+        put?: never;
+        post?: never;
+        delete?: never;
+        options?: never;
+        head?: never;
+        patch?: never;
+        trace?: never;
+    };
     "/": {
         parameters: {
             query?: never;
@@ -273,6 +307,11 @@ export interface components {
             user_id: number;
             /** Is Verified */
             is_verified: boolean;
+        };
+        /** Body_upload_avatar_users_avatar_post */
+        Body_upload_avatar_users_avatar_post: {
+            /** File */
+            file: string;
         };
         /** ChatItem */
         ChatItem: {
@@ -568,6 +607,8 @@ export interface components {
             email: string;
             /** Is Verified */
             is_verified: boolean;
+            /** Avatar Url */
+            avatar_url?: string | null;
         };
         /** UserRegister */
         UserRegister: {
@@ -604,6 +645,8 @@ export interface components {
             email?: string | null;
             /** Phone */
             phone?: string | null;
+            /** Avatar Url */
+            avatar_url?: string | null;
         };
         /** ValidationError */
         ValidationError: {
@@ -1027,6 +1070,39 @@ export interface operations {
             };
         };
     };
+    upload_avatar_users_avatar_post: {
+        parameters: {
+            query?: never;
+            header?: never;
+            path?: never;
+            cookie?: never;
+        };
+        requestBody: {
+            content: {
+                "multipart/form-data": components["schemas"]["Body_upload_avatar_users_avatar_post"];
+            };
+        };
+        responses: {
+            /** @description Successful Response */
+            200: {
+                headers: {
+                    [name: string]: unknown;
+                };
+                content: {
+                    "application/json": components["schemas"]["StandardResponse_dict_"];
+                };
+            };
+            /** @description Validation Error */
+            422: {
+                headers: {
+                    [name: string]: unknown;
+                };
+                content: {
+                    "application/json": components["schemas"]["HTTPValidationError"];
+                };
+            };
+        };
+    };
     create_or_get_conversation_conversation_post: {
         parameters: {
             query?: never;
@@ -1355,6 +1431,26 @@ export interface operations {
                 };
                 content: {
                     "application/json": components["schemas"]["ErrorResponse"];
+                };
+            };
+        };
+    };
+    get_asyncapi_asyncapi_json_get: {
+        parameters: {
+            query?: never;
+            header?: never;
+            path?: never;
+            cookie?: never;
+        };
+        requestBody?: never;
+        responses: {
+            /** @description Successful Response */
+            200: {
+                headers: {
+                    [name: string]: unknown;
+                };
+                content: {
+                    "application/json": unknown;
                 };
             };
         };
